<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:id="@+id/login_id"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/login_title"
            android:layout_width="200dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_agroplace_green"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"/>

        <ProgressBar
            android:id="@+id/login_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="gone"/>

        //Email
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="E-mail"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        //Senha
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Senha"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/login_btn_holder"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:gravity="center"
            android:layout_marginTop="50dp">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="57dp"
                android:layout_marginEnd="10dp" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="50dp"
                android:textStyle="bold"
                android:background="@drawable/btn_circle"
                android:elevation="2dp"
                android:text="ENTRAR"
                android:textSize="16dp"
                android:textColor="#fff" />

        </LinearLayout>
        <TextView
            android:id="@+id/login_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Esqueceu a senha?"
            android:textColor="@android:color/secondary_text_light"
            android:layout_marginTop="20dp"
            android:onClick="abrirCadastroUsuario"/>

        <TextView
            android:id="@+id/login_btn_cad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Não é cadastrado? Crie uma conta"
            android:textColor="@android:color/secondary_text_light"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

</ScrollView>