<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">


<item android:id="@+id/menu_formulario_salvar"
    android:title="Salvar"
    android:orderInCategory="100"
    app:showAsAction="always"
    android:icon="@drawable/ic_done"/>

</menu>